trunk/tests/kiama/negative/name_errors/L1/7_condname4.ob
MODULE condname;

VAR
    avar : INTEGER;

BEGIN
    IF (bvar # TRUE) & (bvar = FALSE) THEN
        avar := 4
    ELSE
        avar := 6
    END;
END condname.
